--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">hunters</string>
+    <string name="action_main">매칭</string>
+    <string name="action_recruit">채용공고</string>
+    <string name="action_search">검색</string>
+    <string name="action_doing">활동</string>
+    <string name="action_profile">프로필</string>
 </resources>
